# flask-user-manager

./: README.md  pyproject.toml
app/: __init__.py  auth.py  database.py  models.py  routes.py  services.py
app/database/: seeds.py
app/routes/: __init__.py  member_routes.py  project_routes.py  task_routes.py  user_routes.py
app/schemas/: project_schemas.py  task_schemas.py
app/services/: __init__.py  member_service.py  project_service.py  task_service.py  user_service.py
