[project]
name = "user-manager"
version = "0.1.0"
description = "User manager built with Flask and SQLAlchemy"
authors = [
    { name = "Seu Nome" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "click==8.3.1",
    "Flask==3.1.3",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.3.2",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "SQLAlchemy==2.0.48",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.6",
    "pyjwt-2.12.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
